--- a/src/content/card/card.css
+++ b/src/content/card/card.css
@@ -1,16 +1,20 @@
 .card {
-    @apply flex flex-col items-center w-56 p-2 bg-white shadow-lg rounded-2xl
-    transition ease-in-out duration-300;
+    @apply flex flex-col items-center w-60 p-2 bg-white shadow-xl rounded-2xl
+    bg-texture bg-left-bottom bg-black/40 bg-blend-overlay
+    hover:cursor-pointer;
+}
 
+.front {
     img {
         @apply w-full h-72 object-cover rounded-2xl;
     }
 
     p {
-        @apply font-dyna font-semibold text-xl pt-2;
+        @apply font-dyna font-semibold text-2xl pt-2 text-gray-200 tracking-wider;
     }
 }
 
-.card:hover {
-    @apply cursor-pointer scale-110;
+.front,
+.back {
+    backface-visibility: hidden;
 }
