--- a/src/content/lose/lose.css
+++ b/src/content/lose/lose.css
@@ -1,7 +1,13 @@
 .lose {
-    @apply basis-8/12 flex flex-col justify-center;
+    @apply basis-8/12 flex flex-col justify-center content-center gap-4;
 
     .quote {
         @apply text-7xl font-river text-gray-100 text-center tracking-widest;
+    }
+
+    button {
+        @apply mx-auto px-4 py-2 rounded-lg transition ease-in-out duration-300
+        hover:bg-blue-400 hover:-translate-y-2 hover:scale-110
+        text-lg font-river tracking-wide bg-blue-300 text-gray-100;
     }
 }
