--- a/src/content/card/card.css
+++ b/src/content/card/card.css
@@ -8,7 +8,7 @@
     @apply flex flex-col items-center;
 
     img {
-        @apply w-full h-72 object-cover rounded-2xl;
+        @apply w-60 h-72 object-cover rounded-2xl;
     }
 
     p {
