--- a/src/content/content.css
+++ b/src/content/content.css
@@ -1,4 +1,16 @@
+.parent-content {
+    @apply basis-8/12 flex flex-col justify-center content-center gap-4;
+}
+
 .content {
-    @apply basis-8/12 grid grid-cols-4 gap-10
+    @apply grid grid-cols-4 gap-10
     justify-items-center items-center p-4 mx-auto;
+}
+
+.live-score {
+    @apply flex justify-center content-center;
+
+    p {
+        @apply font-river font-semibold text-gray-200 text-3xl;
+    }
 }
