--- a/src/content/card/card.css
+++ b/src/content/card/card.css
@@ -1,5 +1,5 @@
 .card {
-    @apply flex flex-col items-center w-60 p-2 shadow-xl rounded-2xl
+    @apply flex flex-col items-center w-60 p-2 shadow-2xl rounded-2xl
     bg-left-bottom bg-black/40 bg-blend-overlay
     hover:cursor-pointer;
 }
